--- a/invest.html
+++ b/invest.html
@@ -48,7 +48,6 @@
       <stop offset="100%" stop-color="#a8d3ff" />
     </linearGradient>
 
-
     <symbol id="i-facebook" viewBox="0 0 32 32">
       <path d="M19 6h5V0h-5c-3.86 0-7 3.14-7 7v3H8v6h4v16h6V16h5l1-6h-6V7c0-.542.458-1 1-1z" />
     </symbol>
@@ -107,10 +106,22 @@
     <symbol id="i-chevron-up" viewBox="0 0 24 24">
       <path d="M18.7 14.3l-6-6c-0.4-0.4-1-0.4-1.4 0l-6 6c-0.4 0.4-0.4 1 0 1.4s1 0.4 1.4 0l5.3-5.3 5.3 5.3c0.2 0.2 0.5 0.3 0.7 0.3s0.5-0.1 0.7-0.3c0.4-0.4 0.4-1 0-1.4z"></path>
     </symbol>
+
+    <symbol id="i-close" viewBox="0 0 24 24">
+      <path d="M18.984 6.422l-5.578 5.578 5.578 5.578-1.406 1.406-5.578-5.578-5.578 5.578-1.406-1.406 5.578-5.578-5.578-5.578 1.406-1.406 5.578 5.578 5.578-5.578z"></path>
+    </symbol>
+
+    <symbol id="i-bars" viewBox="0 0 24 28">
+      <path d="M24 21v2c0 0.547-0.453 1-1 1h-22c-0.547 0-1-0.453-1-1v-2c0-0.547 0.453-1 1-1h22c0.547 0 1 0.453 1 1zM24 13v2c0 0.547-0.453 1-1 1h-22c-0.547 0-1-0.453-1-1v-2c0-0.547 0.453-1 1-1h22c0.547 0 1 0.453 1 1zM24 5v2c0 0.547-0.453 1-1 1h-22c-0.547 0-1-0.453-1-1v-2c0-0.547 0.453-1 1-1h22c0.547 0 1 0.453 1 1z"></path>
+    </symbol>
   </svg>
   <div class="wrapper">
     <header class="header">
       <div class="header__row">
+        <div class="header__menu">
+          <div class="header__hamburger js-mbtoggle"><span class="svg-icon svg-icon--i-bars "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-bars"></use></svg></span>
+          </div>
+        </div>
         <a href="/" class="header__logo">
           <img src="images/logo.png" srcset="images/logo@2x.png 2x, images/logo@3x.png 3x" alt="header__logo-img" class="Руссинвест" />
         </a>
@@ -146,7 +157,24 @@
               <a href="#" class="bar__btn"><span class="svg-icon svg-icon--i-user "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-user"></use></svg></span></a>
             </div>
             <div class="bar__item">
-              <a href="#" class="bar__btn"><span class="svg-icon svg-icon--i-phone "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-phone"></use></svg></span></a>
+              <div class="bar__btn js-bar__btn"><span class="svg-icon svg-icon--i-phone "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-phone"></use></svg></span>
+                <div class="bar-tip">
+                  <div class="bar-tip__item">
+                    <span class="bar-tip__meta">Телефон:</span>
+                    <a class="bar-tip__phone" href="tel: +74953639380">+7 (495) 363-93-80</a>
+                  </div>
+
+                  <div class="bar-tip__item">
+                    <span class="bar-tip__meta">Факс:</span>
+                    <span class="bar-tip__phone">+7 (495) 363-93-90</span>
+                  </div>
+
+                  <div class="bar-tip__item">
+                    <span class="bar-tip__meta">Для СМИ:</span>
+                    <a class="bar-tip__phone" href="tel: +74953639390">+7 (495) 363-93-90</a>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="bar__item">
               <a href="#" class="btn btn--default btn--with-arrow">
@@ -157,8 +185,87 @@
             </div>
           </div>
         </div>
+
+        <div class="header__col header__col--mobile">
+          <div class="bar__btn js-bar__btn bar__btn--mobile"><span class="svg-icon svg-icon--i-phone "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-phone"></use></svg></span>
+            <div class="bar-tip">
+              <div class="bar-tip__item">
+                <span class="bar-tip__meta">Телефон:</span>
+                <a class="bar-tip__phone" href="tel: +74953639380">+7 (495) 363-93-80</a>
+              </div>
+
+              <div class="bar-tip__item">
+                <span class="bar-tip__meta">Факс:</span>
+                <span class="bar-tip__phone">+7 (495) 363-93-90</span>
+              </div>
+
+              <div class="bar-tip__item">
+                <span class="bar-tip__meta">Для СМИ:</span>
+                <a class="bar-tip__phone" href="tel: +74953639390">+7 (495) 363-93-90</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
+    <div class="mobile-block">
+      <div class="mobile-block__inner">
+        <div class="mobile-block__close js-mbtoggle">
+          <span class="svg-icon svg-icon--i-close "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-close"></use></svg></span>
+        </div>
+        <div class="mobile-block__nav offset-medium">
+
+          <a class="mobile-block__nav-item  is-active" href="/invest.html">Инвестиции</a>
+
+          <a class="mobile-block__nav-item " href="/trading.html">Трейдинг</a>
+
+          <a class="mobile-block__nav-item " href="/learn_trading.html">Обучение</a>
+
+          <a class="mobile-block__nav-item " href="/corporate.html">Корпоративным клиентам</a>
+
+
+          <a href="/analytics.html" class="mobile-block__nav-item ">Аналитика</a>
+
+          <a href="/investors.html" class="mobile-block__nav-item ">Инвесторам и акционерам</a>
+
+          <a href="/about.html" class="mobile-block__nav-item ">О компании</a>
+
+        </div>
+
+        <div class="offset-medium">
+          <a href="#" class="btn btn--block btn--default btn--with-arrow offset-medium">
+
+        Открыть счет
+
+      </a>
+
+          <a href="#" class="mobile-block__link">
+            <span class="mobile-block__link-icon">
+
+          <span class="svg-icon svg-icon--i-user "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-user"></use></svg></span>
+            </span>
+            Личный кабинет
+          </a>
+
+          <a href="tel:+74953639380" class="mobile-block__link">
+            <span class="mobile-block__link-icon">
+
+          <span class="svg-icon svg-icon--i-phone "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-phone"></use></svg></span>
+            </span>
+            +7 (495) 363-93-80
+          </a>
+
+          <a href="#" class="link">Обратная связь</a>
+        </div>
+
+
+        <form class="mobile-block__search">
+          <input type="text" placeholder="Поиск" required autocomplete="off">
+          <button type="submit"><span class="svg-icon svg-icon--i-search "><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img"><use xlink:href="#i-search"></use></svg></span>
+          </button>
+        </form>
+      </div>
+    </div>
   </div>
 
   <section class="section hero">
@@ -733,10 +840,156 @@
     </div>
   </footer>
 
-  <script src="javascripts/jquery-3.3.1.min.js"></script>
-  <script src="javascripts/libs.js"></script>
+  <!--  PageList  -->
+  <style>
+    #pagelist {
+      position: fixed;
+      width: 320px;
+      background-color: #272c31;
+      background: repeating-linear-gradient(
+        45deg,
+        #272c31,
+        #272c31 10px,
+        #2b3136 10px,
+        #2b3136 20px
+      );
+      top: 0;
+      bottom: 0;
+      z-index: 2;
+      font-family: inherit;
+      transform: translateX(-100%);
+      transition: transform .5s, box-shadow .3s;
+      box-shadow: 8px 0 20px rgba(0, 0, 0, 0);
+    }
+  
+    #pagelist ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+  
+    #pagelist ul li {
+      display: block;
+    }
+  
+    input[name="__pageListInput"] {
+      display: none;
+      
+    }
+  
+    input[name="__pageListInput"]:checked + #pagelist {
+      transform: translateX(0);
+      box-shadow: 8px 0 20px rgba(0, 0, 0, 0.27);
+    }
+  
+    input[name="__pageListInput"]:checked + #pagelist label {
+      opacity: 1;
+    }
+  
+    #pagelist ul li a{
+      display: block;
+      color: #fff;
+      text-decoration: none;
+      padding: 16px 20px;
+  
+      font-size: 14px;
+      line-height: 18px;
+      transition: color .3s, background-color .3s;
+      border-bottom: 1px solid rgba(255, 255, 255, .05);
+    }
+  
+    #pagelist ul li a:hover {
+      background-color: rgba(0, 0, 0, .35);
+      color: #fff;
+    }
+  
+    #pagelist label{
+      position: absolute;
+      height: 38px;
+      line-height: 36px;
+      background-color: #272c31;
+      left: 100%;
+      top: 0;
+      cursor: pointer;
+      padding-left: 20px;
+      padding-right: 40px;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      font-weight: bold;
+      opacity: .5;
+      transition: opacity .3s;
+      border-top-right-radius: 18px;
+      border-bottom-right-radius: 18px;
+      white-space: nowrap;
+    }
+  
+    #pagelist label span {
+      display: inline-block;
+      vertical-align: middle;
+      background-color: #fff;
+      color: #000;
+      position: absolute;
+      font-size: 11px;
+      line-height: 12px;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 21px;
+      top: 50%;
+      margin-top: -10px;
+      right: 10px;
+    }
+  
+    #pagelist label:hover {
+      opacity: 1;
+    }
+    #pagelist > div {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow-y: auto;
+      padding-top: 32px;
+    }
+  </style>
+  <input type="checkbox" name="__pageListInput" id="__pageListInput">
+  <div id="pagelist">
+    <label for="__pageListInput">pages <span>11</span>
+    </label>
+    <div>
+      <ul>
+        <li><a href="/">1.&nbsp;Главная страница</a>
+        </li>
+        <li><a href="/invest.html">2.&nbsp;Инвестиции</a>
+        </li>
+        <li><a href="/trading.html">3.&nbsp;Трейдинг</a>
+        </li>
+        <li><a href="/about.html">4.&nbsp;О компании</a>
+        </li>
+        <li><a href="/learn_trading.html">5.&nbsp;Обучение</a>
+        </li>
+        <li><a href="/corporate.html">6.&nbsp;Корпоративным клиентам</a>
+        </li>
+        <li><a href="/analytics.html">7.&nbsp;Аналитика</a>
+        </li>
+        <li><a href="/investors.html">8.&nbsp;Инвесторам и&nbsp;акционерам</a>
+        </li>
+        <li><a href="/economist.html">9.&nbsp;Страничка главного экономиста</a>
+        </li>
+        <li><a href="/404.html">10.&nbsp;Страница 404</a>
+        </li>
+        <li><a href="/style.html">11.&nbsp;Страница стилей</a>
+        </li>
+      </ul>
+      <div>
+      </div>
+      <!-- / PageList  -->
+      <script src="javascripts/jquery-3.3.1.min.js"></script>
+      <script src="javascripts/libs.js"></script>
 
-  <script src="javascripts/common.js"></script>
+      <script src="javascripts/common.js"></script>
 </body>
 
 </html>
